added h2 title for links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<header>
 		<h1>Cheatsheet des principaux raccourcis claviers sous Debian</h1>
 		<div class="nav">
+			<h2>Autres cheatsheets</h2>
 			<nav>
 				<ul>
 					<li><a href="bashCS">Bash</a>
