added first command

--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
 			</nav>
 		</div>
 	</header>
+	<dl>
+		<dt>Menu contextuel de la fenêtre</dt>
+		<dl>Alt + Espace</dl>
+	</dl>
 </body>
 </html>
