corrected first command (dd instead of dl)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 	</header>
 	<dl>
 		<dt>Menu contextuel de la fenêtre</dt>
-		<dl>Alt + Espace</dl>
+			<dd>Alt + Espace</dd>
 	</dl>
+
 </body>
 </html>
