added other shortcuts

--- a/index.html
+++ b/index.html
@@ -21,7 +21,34 @@
 	<dl>
 		<dt>Menu contextuel de la fenêtre</dt>
 			<dd>Alt + Espace</dd>
+		<dt>Menu Applications</dt>
+			<dd>Alt + F1</dd>
+		<dt>Lancer une commande</dt>
+			<dd>Alt + F2</dd>
+		<dt>Fermer l'application ouverte</dt>
+			<dd> Alt + F4</dd>
+		<dt>Revenir à la taille initiale d'une fenêtre</dt>
+			<dd>Alt + F5</dd>
+		<dt>Maximiser une fenêtre</dt>
+			<dd>Alt + F10</dd>
+		<dt>Réduire fenêtre active</dt>
+			<dd>Alt + F9</dd>
+		<dt>Déplacer la fenêtre</dt>
+			<dd>Alt + F7</dd>
+		<dt>Redimensionner la fenêtre</dt>
+			<dd>Alt + F8</dd>
+		<dt>Basculer entre les fenêtres</dt>
+			<dd>Alt + Tab</dd>
+		<dt>Verrouiller l'écran</dt>
+			<dd>Super + l</dd>
+		<dt>Changer de bureau</dt>
+			<dd>Ctrl + Alt + flèche haut ou bas</dd>
+		<dt>Déplacer la fenêtre active sur un autre bureau</dt>
+			<dd>Ctrl + Alt + Maj + flèche haut ou bas</dd>
+		<dt>Supprimer définitivement un fichier ou répertoire</dt>
+			<dd>Maj + Suppr</dd>
+		<dt>Afficher les fichiers cachés</dt>
+			<dd>Ctrl + h</dd>
 	</dl>
-
 </body>
 </html>
