added tip for custom shortcuts

--- a/index.html
+++ b/index.html
@@ -50,5 +50,8 @@
 		<dt>Afficher les fichiers cachés</dt>
 			<dd>Ctrl + h</dd>
 	</dl>
+	<div class="tip">
+		<p>Il est possible de personnaliser les raccourcis clavier et d'en rajouter en allant dans les paramètres, clavier et enfin raccourcis clavier.</p>
+	</div>
 </body>
 </html>
