added custom shortcuts tip screenshot

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 	<title>Cheatsheet des raccourcis claviers Debian</title>
 </head>
 <body>
+	<!-- Header -->
 	<header>
 		<h1>Cheatsheet des principaux raccourcis claviers sous Debian</h1>
+		<!-- Links to other cheatsheets -->
 		<div class="nav">
 			<h2>Autres cheatsheets</h2>
 			<nav>
@@ -18,6 +20,8 @@
 			</nav>
 		</div>
 	</header>
+	<!-- Main content -->
+	<!-- List of shortcuts -->
 	<dl>
 		<dt>Menu contextuel de la fenêtre</dt>
 			<dd>Alt + Espace</dd>
@@ -50,8 +54,10 @@
 		<dt>Afficher les fichiers cachés</dt>
 			<dd>Ctrl + h</dd>
 	</dl>
+	<!-- Custom shortcuts tip -->
 	<div class="tip">
 		<p>Il est possible de personnaliser les raccourcis clavier et d'en rajouter en allant dans les paramètres, clavier et enfin raccourcis clavier.</p>
+		<img src="img/custom.png" alt="Ajouter un raccourci clavier personnalisé" />
 	</div>
 </body>
 </html>
