added footer with mailto contact

--- a/index.html
+++ b/index.html
@@ -59,5 +59,9 @@
 		<p>Il est possible de personnaliser les raccourcis clavier et d'en rajouter en allant dans les paramètres, clavier et enfin raccourcis clavier.</p>
 		<img src="img/custom.png" alt="Ajouter un raccourci clavier personnalisé" />
 	</div>
+	<!-- Footer -->
+	<footer>
+		<p> &copy;Benjamin Van Laethem, 2016 - <a href="mailto:benjamin.vanlaethem@gmail.com?subject=Shortcut Cheatsheet">Contact</a></p>
+	</footer>
 </body>
 </html>
