added debian & simplon links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<!-- Header -->
 	<header>
 		<h1>Cheatsheet des principaux raccourcis claviers sous Debian</h1>
+		<!-- Links to debian and simplon -->
+		<a href="https://www.debian.org"><img src="img/debian.png" alt="Debian" width=120px height=120px></a>
+		<a href="http://www.simplon.co"><img src="img/simplon.png" alt="Simplon"></a>
 		<!-- Links to other cheatsheets -->
 		<div class="nav">
 			<h2>Autres cheatsheets</h2>
