--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Cheatsheet des raccourcis claviers Debian</title>
+	<link type="text/css" rel="stylesheet" href="stylesheets/style.css"/>
 </head>
 <body>
 	<!-- Header -->
 	<header>
 		<h1>Cheatsheet des principaux raccourcis claviers sous Debian</h1>
 		<!-- Links to debian and simplon -->
-		<a href="https://www.debian.org"><img src="img/debian.png" alt="Debian" width=120px height=120px></a>
-		<a href="http://www.simplon.co"><img src="img/simplon.png" alt="Simplon"></a>
+		<a href="https://www.debian.org" target="_blank"><img src="img/debian.png" alt="Debian" height=90px></a>
+		<a href="http://www.simplon.co" target="_blank"><img src="img/simplon.png" alt="Simplon" height=90px></a>
 		<!-- Links to other cheatsheets -->
 		<div class="nav">
 			<h2>Autres cheatsheets</h2>
@@ -60,7 +61,7 @@
 	<!-- Custom shortcuts tip -->
 	<div class="tip">
 		<p>Il est possible de personnaliser les raccourcis clavier et d'en rajouter en allant dans les paramètres, clavier et enfin raccourcis clavier.</p>
-		<img src="img/custom.png" alt="Ajouter un raccourci clavier personnalisé" />
+		<a href="img/custom.png" target="_blank"><img src="img/custom.png" alt="Ajouter un raccourci clavier personnalisé" /></a>
 	</div>
 	<!-- Footer -->
 	<footer>
