added links to other ghpages

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<h2>Autres cheatsheets</h2>
 			<nav>
 				<ul>
-					<li><a href="bashCS">Bash</a>
-					<li><a href="gitCS">Git</a>
-					<li><a href="vimCS">Vim</a>
+					<li><a href="https://bin0use.github.io/bashCS" target="_blank">Bash</a>
+					<li><a href="https://bin0use.github.io/gitCS" target="_blank">Git</a>
+					<li><a href="https://bin0use.github.io/vimCS" target="_blank">Vim</a>
 				</ul>
 			</nav>
 		</div>
