--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	</div>
 	<!-- Footer -->
 	<footer>
-		<p> &copy;Benjamin Van Laethem, 2016 - <a href="mailto:benjamin.vanlaethem@gmail.com?subject=Shortcut Cheatsheet">Contact</a><a href="https://github.com/bin0use" target="_blank"><img src="img/github.png" alt="Github" height=20px></a><a href="https://twitter.com/Ben_bin0use" target="_blank"><img src="img/twitter.png" alt="Twitter" height=20px></a></p>
+		<p> &copy;Benjamin Van Laethem, 2016 - <a href="mailto:benjamin.vanlaethem@gmail.com?subject=Shortcut Cheatsheet">Contact</a> <a href="https://github.com/bin0use" target="_blank"><img src="img/github.png" alt="Github" height=20px></a> <a href="https://twitter.com/Ben_bin0use" target="_blank"><img src="img/twitter.png" alt="Twitter" height=20px /></a></p>
 	</footer>
 </body>
 </html>
