deleted list and centered nav

--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
 		<div class="nav">
 			<h2>Autres cheatsheets</h2>
 			<nav>
-				<ul>
-					<li><a href="https://bin0use.github.io/bashCS" target="_blank">Bash</a>
-					<li><a href="https://bin0use.github.io/gitCS" target="_blank">Git</a>
-					<li><a href="https://bin0use.github.io/vimCS" target="_blank">Vim</a>
-				</ul>
+				<a href="https://bin0use.github.io/bashCS" target="_blank">Bash</a>
+				<a href="https://bin0use.github.io/gitCS" target="_blank">Git</a>
+				<a href="https://bin0use.github.io/vimCS" target="_blank">Vim</a>
 			</nav>
 		</div>
 	</header>
